# dwd-converter

./: CMakeLists.txt  README.md  magnitudes.cpp  magnitudes.h  main.cpp  station.cpp  station.h  timespan.cpp  timespan.h  values.cpp  values.h  weatherstation.cpp  weatherstation.h  wetherstation.cpp  wetherstation.h
